2009-07-14  Alan McGovern  <amcgovern@novell.com>

	* tabnavigationwalker.cpp: If TabNavagationWalker::Focus () is
	  called on a Control with the 'Cycle' navigation mode and
	  none of the children of that node can be tabbed to, then
	  focus remains on that control.

2009-07-13  Jeffrey Stedfast  <fejj@novell.com>

	* fonts.cpp (TextFont::Load): Don't g_strfreev() the families
	string array until after we've finished using the hash
	table. Prevents FMRs.

2009-07-13  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Don't allow setting x:Name and Name on the same
	element
	- Raise an error if we try to set a property to an incompatible
	type.

2009-07-13  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp:
	* uielement.cpp: If the focused element is removed from the
	  visual tree, it should lose focus.

2009-07-13  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Oops, trying to get the element name from the wrong
	void*

2009-07-13  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Handle MoonErrors for AddChild.

2009-07-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mp3.cpp:
	* pipeline.h:
	* playlist.cpp:
	* pipeline.cpp:
	* pipeline-asf.cpp:
	* mms-downloader.cpp: IMediaObject: make the media field
	  private, and add thread-safe property accessors (using a
	  mutex and always returning a reffed object). Update all code
	  which accessed the old accessor to use the new accessor and
	  unref the media when done.

2009-07-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp|h: Deleted MemoryNestedSource, not used anymore.

	* type.h:
	* value.h:
	* type-generated.cpp: Regenerated.

2009-07-13  Alan McGovern  <amcgovern@novell.com>

	* control.cpp: A control does not have to be loaded to be
	  focusable, the visual tree it's attached to has to be
	  loaded.

2009-07-13  Alan McGovern  <amcgovern@novell.com>

	* cbinding.h:
	* cbinding.cpp:
	* tabnavigationwalker.h: TabNavigation should activate if the
	  control does not handle the Tab key
