@@ -1,3 +1,8 @@
+2009-07-14  Larry Ewing  <lewing@novell.com>
+
+	* border.cpp (OnSubPropertyChanged): elements must listen to
+	subproperty changes for brushes.
+
 2009-07-14  Alan McGovern  <amcgovern@novell.com>
 
 	* tabnavigationwalker.cpp: If TabNavagationWalker::Focus () is
